--- a/SERVER/db/home_broker.html
+++ b/SERVER/db/home_broker.html
@@ -28,7 +28,8 @@
     
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-     <script type = "text/javascript" src = "http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+     <script type = "text/javascript" 
+             src = "http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
     <h1><center><u>Trade Request</u></center></h1>
