--- a/SERVER/html/home_broker.html
+++ b/SERVER/html/home_broker.html
@@ -42,16 +42,8 @@
     </div>
     <script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="application/javascript">
-        function getQueryParam(param) {
-            location.search.substr(1)
-                .split("&")
-                .some(function (item) { // returns first occurence and stops
-                    return item.split("=")[0] == param && (param = item.split("=")[1])
-                })
-            return param;
-        }
-
-        var uid = getQueryParam("uid");
+        var tmpx = ($(location).attr('href')).split('/');
+        var uid = tmpx[tmpx.length - 1];
 
         console.log(uid);
 
